--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><div class="dropdown">
-  			<button class="dropbtn">Dropdown</button>
+  			<button class="dropbtn">Unidades</button>
 			<div class="dropdown-content">
-    			<a href="#">Link 1</a>
-    			<a href="#">Link 2</a>
-    			<a href="#">Link 3</a>
+    			<a href="#">Unidade 1</a>
+    			<a href="#">Unidade 2</a>
+    			<a href="#">Unidade 3</a>
   			</div>
 			</div></li>
         		<li><a href="/2unidade">Segunda Unidade</a></li>
