--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
+        		<li><div class="dropbtn"><a href="/">Home</a></div></li>
 	        	<li><div class="dropdown">
   			<button class="dropbtn">Unidades</button>
 			<div class="dropdown-content">
@@ -17,8 +17,8 @@
     			<a href="#">Unidade 3</a>
   			</div>
 			</div></li>
-        		<li><a href="/2unidade">Segunda Unidade</a></li>
-        		<li><a href="/3unidade">Terceira Unidade</a></li>
+        		<li><div class="dropbtn"><a href="/2unidade">Sobre</a></div></li>
+        		
     		</ul>
 		</nav>
 		<div class="container">
