--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><div class="dropbtn"><a href="/">Home</a></div></li>
+        		<li><div class="dropdown"><a href="/">Home</a></div></li>
 	        	<li><div class="dropdown">
   			<button class="dropbtn">Unidades</button>
 			<div class="dropdown-content">
@@ -17,7 +17,7 @@
     			<a href="#">Unidade 3</a>
   			</div>
 			</div></li>
-        		<li><div class="dropbtn"><a href="/2unidade">Sobre</a></div></li>
+        		<li><div class="dropdown"><a href="/2unidade">Sobre</a></div></li>
         		
     		</ul>
 		</nav>
