--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Disciplina de Processamento de Imagem!</h1>
+        		<h1>Disciplina de Processamento de Imagem</h1>
 				<p></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
