--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 				<p></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+		<div>Página criada para disponilizar as atividades realizadas na disciplina de Processamento Digital de Imagem</div>
 		<footer>
     		<ul>
         		<li><a href=""</a></li>
