--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
+		<img src="css/drib-processing.png" alt="Smiley face" height="42" width="42">
 		<nav>
     		<ul>
         		<li><div class="menudrp"><a href="/">Home</a></div></li>
@@ -18,7 +19,6 @@
   			</div>
 			</div></li>
         		<li><div class="menudrp"><a href="/2unidade">Sobre</a></div></li>
-        		
     		</ul>
 		</nav>
 		<div class="container">
