--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-		<img src="css/drib-processing.png" alt="Smiley face" height="42" width="42">
+		<img src="css/drib-processing.png" height="200" width="200">
 		<nav>
     		<ul>
         		<li><div class="menudrp"><a href="/">Home</a></div></li>
