--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<img src="css/drib-processing.png" height="200" width="200" position="relative" display="inline">
 		<nav>
     		<ul>
+    			<img src="css/drib-processing.png" height="200" width="200" position="relative" display="inline" align="left">
         		<li><div class="menudrp"><a href="/">Home</a></div></li>
 	        	<li><div class="dropdown">
   			<button class="dropbtn">Unidades</button>
