--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		
 		<nav>
     		<ul>
-    			<img src="css/drib-processing.png" height="200" width="200" position="relative" display="inline" align="left">
-        		<li><div class="menudrp"><a href="/">Home</a></div></li>
+  
+        		<li><img src="css/drib-processing.png" height="200" width="200" position="relative" display="inline" align="left"><div class="menudrp"><a href="/">Home</a></div></li>
 	        	<li><div class="dropdown">
   			<button class="dropbtn">Unidades</button>
 			<div class="dropdown-content">
