--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-		
-		<nav>
     		<ul>
-  
-        		<li><img src="css/drib-processing.png" height="200" width="200" position="relative" display="inline" align="left"><div class="menudrp"><a href="/">Home</a></div></li>
+  			<img src="css/drib-processing.png" height="200" width="200" position="relative" display="inline" align="left">
+        		<li><div class="menudrp"><a href="/">Home</a></div></li>
 	        	<li><div class="dropdown">
   			<button class="dropbtn">Unidades</button>
 			<div class="dropdown-content">
@@ -21,7 +19,6 @@
 			</div></li>
         		<li><div class="menudrp"><a href="/2unidade">Sobre</a></div></li>
     		</ul>
-		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Processamento Digital de Imagem</h1>
