--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>STANLEY - Free Bootstrap Theme </title>
 
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
 
     <!-- Custom styles for this template -->
