--- a/index.html
+++ b/index.html
@@ -39,14 +39,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">STANLEY</a>
+          <a class="navbar-brand" href="index.html">Home</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="work.html">Work</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="work.html">Unidade 1</a></li>
+            <li><a href="about.html">Unidade 2</a></li>
+            <li><a href="blog.html">Unidade 3</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
