--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 centered">
-					<img src="assets/img/user.png" alt="Stanley">
+					<img src="assets/img/image1" alt="P">
 					<h1>Processamento Digital de Imagem</h1>
 					<p>Página criada para divulgar os exercícios resolvidos da disciplina de PDI</p>
 					
