--- a/index.html
+++ b/index.html
@@ -83,11 +83,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4">
-					<h4>My Bunker</h4>
+					<h4>Sobre</h4>
 					<p>
-						Some Address 987,<br/>
-						+34 9054 5455, <br/>
-						Madrid, Spain.
+						Matheus Vínicius Medeiros de Souza<br/>
+						Estudante de Eng. Elétrica - UFRN <br/>
 					</p>
 				</div><!-- /col-lg-4 -->
 				
