--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,9 +43,9 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="work.html">Unidade 1</a></li>
-            <li><a href="about.html">Unidade 2</a></li>
-            <li><a href="blog.html">Unidade 3</a></li>
+            <li><a href="u1.html">Unidade 1</a></li>
+            <li><a href="u2.html">Unidade 2</a></li>
+            <li><a href="u3.html">Unidade 3</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
