--- a/u1.html
+++ b/u1.html
@@ -37,7 +37,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">STANLEY</a>
+          <a class="navbar-brand" href="index.html">HOME</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -56,8 +56,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
 					<p><img src="assets/img/user.png" width="50px" height="50px"> <ba>Stanley Stinson</ba></p>
-					<p><bd>January 3, 2014</bd></p>
-					<h4>An Image Post</h4>
+					s<h4>An Image Post</h4>
 					<p><img class="img-responsive" src="assets/img/blog01.jpg" alt=""></p>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 					<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
