--- a/u1.html
+++ b/u1.html
@@ -56,11 +56,11 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
 					<p><img src="assets/img/user.png" width="50px" height="50px"> <ba>Stanley Stinson</ba></p>
-					s<h4>An Image Post</h4>
+					<h4>Exercício 3.2 - Negativo</h4>
 					<p><img class="img-responsive" src="assets/img/blog01.jpg" alt=""></p>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-					<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-					<p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+					<p>Para deixar a imagem com o efeito negativo você precisa inverter as core e isso pode ser feito</p>
+					<p></p>
+					<p></p>
 					<br>
 					<p><bt>TAGS: <a href="#">Wordpress</a> - <a href="#">Web Design</a></bt></p>
 					<hr>
