--- a/u1.html
+++ b/u1.html
@@ -58,7 +58,7 @@
 					<p><img src="assets/img/user.png" width="50px" height="50px"> <ba>Stanley Stinson</ba></p>
 					<h4>Exercício 3.2 - Negativo</h4>
 					<p><img class="img-responsive" src="assets/img/blog01.jpg" alt=""></p>
-					<p>Para deixar a imagem com o efeito negativo você precisa inverter as core e isso pode ser feito</p>
+					<p>Para deixar a imagem com o efeito negativo você precisa inverter as cores. Isso pode ser feito alterando o valor do pixel para o seu valor contrário.</p>
 					<p></p>
 					<p></p>
 					<br>
