--- a/u1.html
+++ b/u1.html
@@ -57,7 +57,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<p><img src="assets/img/user.png" width="50px" height="50px"> <ba>Stanley Stinson</ba></p>
 					<h4>Exercício 3.2 - Negativo</h4>
-					<p><img class="img-responsive" src="assets/img/blog01.jpg" alt=""></p>
+					<p><img class="img-responsive" src="assets/img/img1.png" alt=""></p>
 					<p>	Para deixar a imagem com o efeito negativo você precisa inverter as cores. Isso pode ser feito alterando o valor do pixel para o seu valor contrário. Dessa forma, só precisamos subtrair o valor atual do pixel de 255.</p>
 					<p>A linha de código abaixo ilustra isso:</p>
 					<p><b>image.at<uchar>(i,j)=255-image.at<uchar>(i,j);</b></p>
