--- a/u1.html
+++ b/u1.html
@@ -63,6 +63,9 @@
 					<p><b>image.at<uchar>(i,j)=255-image.at<uchar>(i,j);</b></p>
 					<p><img class="img-responsive" src="assets/img/img1.png" alt=""></p>
 					<br>
+					<br>
+					<h4>Exercício 3.3 - Troca de Regiões</h4>
+					<p><img class="img-responsive" src="assets/img/img3.png" alt=""></p>
 				</div>
 
 			</div><!-- /row -->
