--- a/u1.html
+++ b/u1.html
@@ -58,7 +58,8 @@
 					<p><img src="assets/img/user.png" width="50px" height="50px"> <ba>Stanley Stinson</ba></p>
 					<h4>Exercício 3.2 - Negativo</h4>
 					<p><img class="img-responsive" src="assets/img/img2.png" alt=""></p>
-					<p>	Para deixar a imagem com o efeito negativo você precisa inverter as cores. Isso pode ser feito alterando o valor do pixel para o seu valor contrário. Dessa forma, só precisamos subtrair o valor atual do pixel de 255.</p>
+					<br>
+					<p>    Para deixar a imagem com o efeito negativo você precisa inverter as cores. Isso pode ser feito alterando o valor do pixel para o seu valor contrário. Dessa forma, só precisamos subtrair o valor atual do pixel de 255.</p>
 					<p>A linha de código abaixo ilustra isso e o código:</p>
 					<p><b>image.at<uchar>(i,j)=255-image.at<uchar>(i,j);</b></p>
 					<p><img class="img-responsive" src="assets/img/img1.png" alt=""></p>
@@ -66,6 +67,8 @@
 					<br>
 					<h4>Exercício 3.3 - Troca de Regiões</h4>
 					<p><img class="img-responsive" src="assets/img/img3.png" alt=""></p>
+					<br>
+					<p>    Esse algoritmo divide a imagem em 4 regiões e em seguida as troca de maneira aleatória.</p>
 				</div>
 
 			</div><!-- /row -->
