--- a/u1.html
+++ b/u1.html
@@ -70,7 +70,10 @@
 					<br>
 					<p><img class="img-responsive" src="assets/img/img3.png" alt=""></p>
 					<br>
-					<p>    Esse algoritmo divide a imagem em 4 regiões e em seguida as troca de maneira aleatória.</p>
+					<p>Esse algoritmo divide a imagem em 4 regiões e em seguida as troca de maneira aleatória.</p>
+					<p>Primeiramente usamos a função Rect() para recortar 4 retângulos e salvamos as 4 regiões em variáveis, depois criamos um looping para montar a nova imagem com as 4 regiões aleatoriamente como na image acima.</p>
+					<p>O código desenvolvido segue abaixo:</p>
+					<p><img class="img-responsive" src="assets/img/img4.png" alt=""></p>
 				</div>
 
 			</div><!-- /row -->
