--- a/u1.html
+++ b/u1.html
@@ -60,7 +60,7 @@
 					<br>
 					<p><img class="img-responsive" src="assets/img/img2.png" alt=""></p>
 					<br>
-					<p>    Para deixar a imagem com o efeito negativo você precisa inverter as cores. Isso pode ser feito alterando o valor do pixel para o seu valor contrário. Dessa forma, só precisamos subtrair o valor atual do pixel de 255.</p>
+					<p text-align: justify; >Para deixar a imagem com o efeito negativo você precisa inverter as cores. Isso pode ser feito alterando o valor do pixel para o seu valor contrário. Dessa forma, só precisamos subtrair o valor atual do pixel de 255.</p>
 					<p>A linha de código abaixo ilustra isso e o código:</p>
 					<p><b>image.at<uchar>(i,j)=255-image.at<uchar>(i,j);</b></p>
 					<p><img class="img-responsive" src="assets/img/img1.png" alt=""></p>
