--- a/u1.html
+++ b/u1.html
@@ -74,6 +74,8 @@
 					<p>Primeiramente usamos a função Rect() para recortar 4 retângulos e salvamos as 4 regiões em variáveis, depois criamos um looping para montar a nova imagem com as 4 regiões aleatoriamente como na image acima.</p>
 					<p>O código desenvolvido segue abaixo:</p>
 					<p><img class="img-responsive" src="assets/img/img4.png" alt=""></p>
+					<br>
+					<p>Exercício 4.2.1 - Preenchendo Regiões</p>
 				</div>
 
 			</div><!-- /row -->
