--- a/u1.html
+++ b/u1.html
@@ -76,7 +76,7 @@
 					<p><img class="img-responsive" src="assets/img/img4.png" alt=""></p>
 					<br>
 					<p>Exercício 4.2.1 - Preenchendo Regiões</p>
-					<p>Utilizando o seedfill ele irá pintar cada objeto encontrado com um tom de cinza. Se a imagem possuir mais de 255 imagens, podemos utiizar outro tipo de variável no lugar de unsigned char, pois a diferença no tom de cinza para nós será impeceptível, mas o computador conseguirá contar a quantidade de objeto.</p>
+					<h4>Utilizando o seedfill ele irá pintar cada objeto encontrado com um tom de cinza. Se a imagem possuir mais de 255 imagens, podemos utiizar outro tipo de variável no lugar de unsigned char, pois a diferença no tom de cinza para nós será impeceptível, mas o computador conseguirá contar a quantidade de objeto.</h4>
 				</div>
 
 			</div><!-- /row -->
