--- a/u1.html
+++ b/u1.html
@@ -77,6 +77,8 @@
 					<br>
 					<p>Exercício 4.2.1 - Preenchendo Regiões</p>
 					<h4>Utilizando o seedfill ele irá pintar cada objeto encontrado com um tom de cinza. Se a imagem possuir mais de 255 imagens, podemos utiizar outro tipo de variável no lugar de unsigned char, pois a diferença no tom de cinza para nós será impeceptível, mas o computador conseguirá contar a quantidade de objeto.</h4>
+					<br>
+					<p>Exercício 4.2.2 - Preenchendo Regiões</p>
 				</div>
 
 			</div><!-- /row -->
