--- a/u1.html
+++ b/u1.html
@@ -55,7 +55,7 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
-					<p><img src="assets/img/user.png" width="50px" height="50px"> <ba>Stanley Stinson</ba></p>
+					<p><img src="assets/img/user.png" width="50px" height="50px"> <ba>Matheus Vinícius</ba></p>
 					<h4>Exercício 3.2 - Negativo</h4>
 					<br>
 					<p><img class="img-responsive" src="assets/img/img2.png" alt=""></p>
