--- a/u1.html
+++ b/u1.html
@@ -80,7 +80,7 @@
 					<br>
 					<h4>Exercício 4.2.2 - Preenchendo Regiões</h4>
 					<br>
-					<p>Primeiramente limpamos as bordas na imagem, visto que na borda não conseguimos saber se é com buraco ou não.</p>
+					<p>Primeiramente limpamos as bordas na imagem, visto que na borda não conseguimos saber se existe buraco ou não.</p>
 					<p>Para limpar as bordas varremos a imagem na primeira linha e coluna, além de também varrer a última linha e coluna. Se um objeto for encontrado, aplicamos o seefill mudando o valor do pixel para 0, ou seja, ficando o qual o fundo.</p>
 					<p>Resultado da limpeza nas bordas abaixo:</p>
 					<p><img class="img-responsive" src="assets/img/img5.png" alt=""></p>
