--- a/u1.html
+++ b/u1.html
@@ -88,6 +88,10 @@
 					<p>Para contar quantos buracos tem e diferenciar os objetos com buracos dos sem buracos, varremos a imagem procurando por objetos (pixels com valor 255) e salvamos sua coordenada. Se ele não for 255 verificamos se ele é 0 (buraco), caso seja 0, indica que o último valor branco encontrado é um objeto com buraco, assim, aplicamos o seedfill para um tom 150 no buraco, no objeto e incrementamos um contador.</p>
 					<p>Segue esse trecho de código abaixo:</p>
 					<p><img class="img-responsive" src="assets/img/img6.png" alt=""></p>
+					<br>
+					<p>Segue abaixo retorno final do software:</p>
+					<p><img class="img-responsive" src="assets/img/img7.png" alt=""></p>
+					
 				</div>
 
 			</div><!-- /row -->
