--- a/u1.html
+++ b/u1.html
@@ -91,6 +91,10 @@
 					<br>
 					<p>Segue abaixo retorno final do software:</p>
 					<p><img class="img-responsive" src="assets/img/img7.png" alt=""></p>
+					<br>
+					<h4>Exercício 5.2 - Histograma</h4>
+					<p>Para equalizar a imagem utilizei a função do openCV equalizeHist() e o código de calculo do histograma disponibilizado pelo professor. Além disso, associei a função equalize com outras do openCV</p>
+					<p>O código usado pode ser visto abaixo:</p>
 					
 				</div>
 
