--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <li><a href="u1.html">Unidade 1</a></li>
             <li><a href="u2.html">Unidade 2</a></li>
             <li><a href="u3.html">Unidade 3</a></li>
+            <li><a href="down.html">Downloads</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
