--- a/down.html
+++ b/down.html
@@ -57,7 +57,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
 					<p><img src="assets/img/user.png" width="50px" height="50px"> <ba>Matheus Vinícius</ba></p>
-					<h4>Códigos utilizados/h4>
+					<h4>Códigos utilizados</h4>
 					<br>
 					<a href="assets/down/negativo.cpp" download="negativo.cpp">Negativo</a>
 					<a href="assets/down/regions.cpp" download="regions.cpp">Regiões</a>
