--- a/down.html
+++ b/down.html
@@ -41,9 +41,9 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="u1.html">Unidade 1</a></li>
-            <li><a href="u2.html">Unidade 2</a></li>
-            <li><a href="u3.html">Unidade 3</a></li>
+            <li><a href="u1.html">Unidade 1</a></li><br>
+            <li><a href="u2.html">Unidade 2</a></li><br>
+            <li><a href="u3.html">Unidade 3</a></li><br>
             <li><a href="down.html">Downloads</a></li>
           </ul>
         </div><!--/.nav-collapse -->
