--- a/down.html
+++ b/down.html
@@ -41,9 +41,9 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="u1.html">Unidade 1</a></li><br>
-            <li><a href="u2.html">Unidade 2</a></li><br>
-            <li><a href="u3.html">Unidade 3</a></li><br>
+            <li><a href="u1.html">Unidade 1</a></li>
+            <li><a href="u2.html">Unidade 2</a></li>
+            <li><a href="u3.html">Unidade 3</a></li>
             <li><a href="down.html">Downloads</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -59,10 +59,10 @@
 					<p><img src="assets/img/user.png" width="50px" height="50px"> <ba>Matheus Vinícius</ba></p>
 					<h4>Códigos utilizados</h4>
 					<br>
-					<a href="assets/down/negativo.cpp" download="negativo.cpp">Negativo</a>
-					<a href="assets/down/regions.cpp" download="regions.cpp">Regiões</a>
-					<a href="assets/down/labeling.cpp" download="labeling.cpp">Regiões - Buracos</a>
-					<a href="assets/down/equalizador.cpp" download="equalizador.cpp">Equalizador</a>
+					<a href="assets/down/negativo.cpp" download="negativo.cpp">Negativo</a><br>
+					<a href="assets/down/regions.cpp" download="regions.cpp">Regiões</a><br>
+					<a href="assets/down/labeling.cpp" download="labeling.cpp">Regiões - Buracos</a><br>
+					<a href="assets/down/equalizador.cpp" download="equalizador.cpp">Equalizador</a><br>
 					<a href="assets/down/filtroespacial.cpp" download="filtroespacial.cpp">Filtro Espacial</a>
 					
 				</div>
