--- a/u1.html
+++ b/u1.html
@@ -119,6 +119,7 @@
 					<p><img class="img-responsive" src="assets/img/img10.png" alt=""></p>
 					<p><b>Original-Laplaciano do gaussiano</b></p>
 					<p><img class="img-responsive" src="assets/img/img11.png" alt=""></p>
+					<p>Trabalhando no tiltshift...</p>
 					
 					
 				</div>
