--- a/u1.html
+++ b/u1.html
@@ -119,7 +119,8 @@
 					<p><img class="img-responsive" src="assets/img/img10.png" alt=""></p>
 					<p><b>Original-Laplaciano do gaussiano</b></p>
 					<p><img class="img-responsive" src="assets/img/img11.png" alt=""></p>
-					<p>Trabalhando no tiltshift...</p>
+					<h4>Exercício 7.1 - Tiltshift</h4>
+					<p>Implementando...</p>
 					
 					
 				</div>
