--- a/u1.html
+++ b/u1.html
@@ -121,8 +121,8 @@
 					<p><img class="img-responsive" src="assets/img/img11.png" alt=""></p>
 					<h4>Exercício 7.1 - Tiltshift</h4>
 					<p>Para implementar o efeito utilizamos a função addweighted para fazer a combinação de duas imagens para um dado coeficiente alfa. Uma imagem será a foto a qual o filtro será aplicado, a outra é a mesma só que borrada através de um filtro da méda e o coeficiente utilizado é uma função que modela a região de desfoque no eixo vertical.</p>
-					<p>A função utilizada é a seguinte: α(x)=1/2((tanhx−l1)/d−(tanhx−l2)/d)</p>
-					<p>Onde l1 e l2 delimita a área onde a foto terá foco e d é a intensidade com que a área será desfocada</p>
+					<p>A função utilizada é a seguinte: α(x)=1/2((tanhx−l1)/d−(tanhx−l2)/d).</p>
+					<p>Onde l1 e l2 delimita a área onde a foto terá foco e d é a intensidade com que a área será desfocada.</p>
 					<p>No algoritmo utilizamos trackbars para escolher a posição que a área de foco estará, o tamanho da área de foco, como também o intensidade do desfoque.</p>
 					<p>A implementação da função criada para aplicar o filtro e calcular os área segue abaixo:</p>
 					<p><img class="img-responsive" src="assets/img/img12.png" alt=""></p>
